--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -158,7 +158,7 @@ resources:
       - name: boomifileshare
         capacityGb: 1024
     networks:
-      - network: {{ properties["gkeClusterNetwork"] }}
+      - network: {{ network }}
 
 - name: {{ deployment }}-gke-cluster
   type: gke.py
@@ -169,8 +169,8 @@ resources:
     cluster:
       name: {{ deployment }}-gke-cluster
       description: {{ deployment }} k8s Cluster
-      network: {{ properties["gkeClusterNetwork"] }}
-      subnetwork: {{ privateSubnetwork }}
+      network: {{ network }}
+      subnetwork: {{ gkeSubetwork }}
       initialClusterVersion: 1.17.12-gke.1501
       addonsConfig:
         httpLoadBalancing:
@@ -242,7 +242,7 @@ resources:
     boomiUserEmailID: {{ boomiUserEmailID }}
     boomiPassword: {{ boomiPassword }}
     boomiAccountID: {{ boomiAccountID }}
-    network: {{ properties["gkeClusterNetwork"] }}
+    network: {{ gkeSubetwork }}
     CLUSTER_NAME: $(ref.{{ deployment }}-gke-cluster.name)
     ipaddress: $(ref.{{ deployment }}-cloud-filestore.fileShareIp)
     ingressStaticIpName: $(ref.{{ deployment }}-static-ip.staticIpName)
