--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -7,10 +7,7 @@
 
 resources:
 - name: {{ deployment }}-cloudbuild
-  action: gcp-types/cloudbuild-v1:cloudbuild.projects.builds.create
-  metadata:
-    runtimePolicy:
-    - UPDATE_ALWAYS
+  type: gcp-types/cloudbuild-v1:cloudbuild.projects.builds.create
   properties:
     timeout: 120s
     steps:
