--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -207,7 +207,7 @@ resources:
       loggingService: logging.googleapis.com/kubernetes
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
-        enablePrivateNodes: true
+        enablePrivateNodes: false
         enablePrivateEndpoint: false
         masterIpv4CidrBlock: 172.16.0.0/28
       masterAuthorizedNetworksConfig: 
