--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -7,7 +7,10 @@
 
 resources:
 - name: {{ deployment }}-cloudbuild
-  type: gcp-types/cloudbuild-v1:cloudbuild.projects.builds.create
+  action: gcp-types/cloudbuild-v1:cloudbuild.projects.builds.create
+  metadata:
+    runtimePolicy:
+    - UPDATE_ALWAYS
   properties:
     timeout: 120s
     steps:
